[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ofiber"]

[project]
name = "ofiber"
version = "0.9.0"
authors = [
    { name = "Scott Prahl", email = "scott.prahl@oit.edu" }
]
description = "Light Propagation in Optical Fibers"
keywords = [
    "refraction",
    "Sellmeier",
    "modes",
    "dispersion",
    "graded index",
    "gradient index",
    "single mode",
    "multimode",
    "step index",
    "erbium",
    "waveguide",
    "planar",
    "cylindrical",
    ]
readme = "README.rst"
license = "MIT"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
dev = ["pytest >= 7.0"]

[project.urls]
Homepage = "https://github.com/scottprahl/ofiber"
Documentation = "https://ofiber.readthedocs.io"
Source = "https://github.com/scottprahl/ofiber"
Tracker = "https://github.com/scottprahl/ofiber/issues"
Changelog = "https://github.com/scottprahl/ofiber/blob/main/docs/CHANGELOG.rst"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.pylint]
disable = [
    "C0103", "C0209", "C0302",
    "R0902", "R0904", "R0912", "R0913", "R0914", "R0915", "R0917", "R1702",
    "W0511"
]
max-line-length = 120

[tool.ruff]
line-length = 120
exclude = ["docs", ".venv"]
lint.select = ["D", "E", "F", "W"]
lint.ignore = ["D200", "D212", "F403"]
lint.pydocstyle.convention = "google"

[tool.check-manifest]
ignore = [
  ".readthedocs.yaml",
  ".jupyterlite-ignore",
  "Makefile",
  "requirements-dev.txt",
  "jupyter_lite_config.json",
  "docs/*",
  "docs/**/*",
  "release.txt",
]


