[metadata]
name=ofiber
version=0.6.2
author=Scott Prahl
author_email=scott.prahl@oit.edu
description=Light Propagation in Optical Fibers
url=https://github.com/scottprahl/ofiber.git  
license=MIT
classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords=
    refraction
    Sellmeier
    modes
    dispersion
    graded index
    gradient index
    single mode
    multimode
install_requires=
    numpy
    scipy
test_suite=ofiber.test.test

[options]
packages=ofiber
install_requires = numpy; scipy
python_requires = >=3.4
setup_requires = setuptools>=44
