[metadata]
description=Light Propagation in Optical Fibers

classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords=
    refraction
    Sellmeier
    modes
    dispersion
    graded index
    gradient index
    single mode
    multimode
    step index

install_requires=
    numpy
    scipy
test_suite=ofiber.test.test

[options]
packages=ofiber
python_requires = >=3.4
setup_requires = setuptools>=44

[flake8]
ignore = W503, D212, D411, N802, N803, N806, E501
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
    tests/test_jit.py:D100,D101,D102
    tests/test_nojit.py:D100,D101,D102
    tests/conftest.py:D100,D101,D102,D103
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
