[metadata]
description=Light Propagation in Optical Fibers

classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

keywords=
    refraction
    Sellmeier
    modes
    dispersion
    graded index
    gradient index
    single mode
    multimode
    step index
    erbium
    waveguide
    planar
    cylindrical

install_requires=
    numpy
    scipy
